<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright 2016 Christopher Rucinski
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".PlaylistsCollectionsActivity">
    <item
        android:id="@+id/action_playlist_continuous_play"
        android:icon="@drawable/ic_continuous_play"
        android:onClick="onPlaylistPlaybackItemClick"
        android:title="@string/action_playlist_continuous_play" />
    <item
        android:id="@+id/action_playlist_random"
        android:icon="@drawable/ic_shuffle"
        android:onClick="onPlaylistPlaybackItemClick"
        android:title="@string/action_playlist_random" />
    <item
        android:id="@+id/action_playlist_repeat"
        android:icon="@drawable/ic_repeat"
        android:onClick="onPlaylistPlaybackItemClick"
        android:title="@string/action_playlist_repeat" />
    <item
        android:id="@+id/action_playlist_edit"
        android:enabled="false"
        android:icon="@drawable/ic_edit"
        android:onClick="onPlaylistEditClick"
        android:title="@string/action_playlist_edit" />
</menu>
